--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -4,7 +4,7 @@ schema_version = "1.0.0"
 id = "keyframe_tools_extension"
 version = "1.0.0"
 name = "Keyframe Tools"
-tagline = "A set of tools for inserting, deleting, and moving keyframes."
+tagline = "A set of tools for inserting, deleting, and moving keyframes"
 maintainer = "KSYN <hydrocallis@gmail.com>"
 # Supported types: "add-on", "theme"
 type = "add-on"
@@ -14,7 +14,7 @@ type = "add-on"
 
 # Optional list defined by Blender and server, see:
 # https://docs.blender.org/manual/en/dev/advanced/extensions/tags.html
-tags = ["Animation", "Keyframes"]
+tags = ["Animation"]
 
 blender_version_min = "4.2.0"
 # # Optional: Blender version that the extension does not support, earlier versions are supported.
